--- a/style.css
+++ b/style.css
@@ -46,6 +46,7 @@ body h1{
     box-shadow: 0px 0px 10px #FCEE58;
     border: none;
     margin-bottom: 20px;
+    color: #FCEE58;
 }
 
 .barraPesquisa::placeholder{
@@ -71,7 +72,7 @@ body h1{
 
 select{
     background-color: black;
-    color: #fcee589a;
+    color: #FCEE58;
     border: none;
     box-shadow: 0px 0px 10px #FCEE58;
     border-radius: 5px;
