--- a/style.css
+++ b/style.css
@@ -96,3 +96,14 @@ select{
     border: none;
     border-radius: 5px;
 }
+
+.button{
+    max-height: 25px;
+    background-color: black;
+    color: #FCEE58;
+    box-shadow: 0px 0px 10px #FCEE58;
+    font-size: 13pt;
+    margin: 5px;
+    border: none;
+    border-radius: 5px;
+}
